added graphene stuff

--- a/report/report.bib
+++ b/report/report.bib
@@ -293,3 +293,17 @@ author = {{SymPy Development Team}},
 year = {2013},
 url = {http://www.sympy.org},
 }
+@article{Myers:2010pk,
+      author         = "Myers, Robert C. and Sachdev, Subir and Singh, Ajay",
+      title          = "{Holographic Quantum Critical Transport without
+                        Self-Duality}",
+      journal        = "Phys.Rev.",
+      volume         = "D83",
+      pages          = "066017",
+      doi            = "10.1103/PhysRevD.83.066017",
+      year           = "2011",
+      eprint         = "1010.0443",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      SLACcitation   = "%%CITATION = ARXIV:1010.0443;%%",
+}
