--- a/report/report.bib
+++ b/report/report.bib
@@ -307,3 +307,14 @@ url = {http://www.sympy.org},
       primaryClass   = "hep-th",
       SLACcitation   = "%%CITATION = ARXIV:1010.0443;%%",
 }
+@misc{
+Wenger2012,
+author={Wenger, Tobias},
+title={Holographic Superconductivity},
+abstract={In this thesis we apply the AdS/CFT conjecture to condensed matter physics and more specifically we consider the application to layered superconductors. In this thesis we apply the AdS/CFT conjecture to condensed matter physics and more specifically we consider the application to layered superconductors. We start by analysing the "ordinary" 2+1 dimensional holographic superconductor where we only have a scalar field coupled to an Einstein-Maxwell theory in the bulk. We then proceed to add first order corrections to the theory by higher derivative terms in the action. This is initially done by adding a Weyl correction which allows us to interpolate between vortex- and quasi particle excitations in the superconductor. We then generalise this to adding all possible first order correction terms to the theory, this amounts to adding non-linear Maxwell terms to the bulk Lagrangian. The stability of the theory is considered and we also explore the parameter space and in particular we find that we are able to tune the energy gap 2 Tc, which in the weakly coupled BCS-case is 3:5. The range of the values for the energy gap we find matches nicely with the experimentally obtained range of energy gaps for high-Tc cuprates. By tuning the coupling strength of the non-linear Maxwell terms we find that we can produce Drude behaviour at low frequencies. },
+publisher={Institutionen för fundamental fysik, Chalmers tekniska högskola,},
+place={Göteborg},
+year={2012},
+keywords={AdS/CFT, AdS/CMP, Holography, Superconductivity, Black holes, Weyl corrections, Energy gap},
+note={58},
+}
