--- a/report/report.tex
+++ b/report/report.tex
@@ -686,15 +686,15 @@ The conductivity below $T_c$ can be calculated the same way using the numerical 
 \end{equation}
 This pole is visible in Figure \ref{f:cond}.
 \section{Consistency Check using a Conductivity Sum Rule}
-The Kramers-Kronig relations and the decoupeling of the electrons from a conductor at high frequencies can be used to prove a sum rule for the conductivity \cite{PhysRev.109.1398}. The rule states
+The Kramers-Kronig relations and the independence of low energy properties for the high frequency conductivity can be used to prove a sum rule for the conductivity \cite{PhysRev.109.1398}. The rule states that
 \begin{equation}
  \int_0^\infty\re(\sigma(\omega))\d\omega=C
 \end{equation}
-where $C$ is a constant depending on what system we are considering. This integral diverges in our case so the rule must be modified. The proof uses that the imaginary part of $\sigma(\omega)$ becomes independent of low energy properties such as the temperature at high enough frequencies. That the Kramers-Kronig relations apply to $\sigma(\omega)$ is also used. These two properties are also true for $\sigma(\omega)-1$ so the rule can be modified into
+where $C$ is a constant depending on what system we are considering. This integral diverges in our case since $\sigma\rightarrow1$ for high frequencies, so the rule must be modified. The proof uses that the imaginary part of $\sigma(\omega)$ becomes independent of low energy properties such as the temperature at high enough frequencies. That the Kramers-Kronig relations apply to $\sigma(\omega)$ is also used. These two properties are also true for $\sigma(\omega)-1$ so the rule can be modified into
 \begin{equation}
  \int_0^\infty\re(\sigma(\omega)-1)\d\omega=C.
 \end{equation}
-The analytical solution above $T_c$ now gives $C=0$. This rule can now be used to verify that our numerics are accurate. The integral of $\re(\sigma(\omega)-1)$ should vanish for all temperatures. It is then important to include the $\delta$-function at $\omega=0$ which our numerics do not catch. We can however find the amplitude, $\Sigma_\delta$, of the $\delta$-function from the amplitude of the pole in the imaginary part of the conductivity. The sum of the integral of the continous part of the conductivity, $\int(\sigma_n-1)\d \omega$, and $\Sigma_\delta$ should then equal 0 for all temperatures. The result is seen in Figure \ref{f:sum}. A suitable cut-off frequency has been used but since $\sigma(\omega)$ converges fast to 1 is this not a concern. No large discrepancies are observed. This is a strong check of the numerics since the real part of the conductivity at all frequencies and temperatures and the amplitude of the pole all have to match up. The largest discrepancy is observed for low temperatures, this is expected since the numerical integrator there has been observed to make smaller steps indicating a numerically more difficult problem.
+The analytical solution above $T_c$ now gives $C=0$. This rule can now be used to verify that our numerics are accurate. The integral of $\re(\sigma(\omega)-1)$ should vanish for all temperatures. It is then important to include the $\delta$-function at $\omega=0$ which our numerics do not catch. We can however find the amplitude, $\Sigma_\delta$, of the $\delta$-function from the amplitude of the pole in the imaginary part of the conductivity. The sum of the integral of the continous part of the conductivity, $\int(\sigma_n-1)\d \omega$, and $\Sigma_\delta$ should then equal 0 for all temperatures. The result is seen in Figure \ref{f:sum}. A suitable cut-off frequency has been used but since $\sigma(\omega)$ converges fast to 1 this is not a concern. No large discrepancies are observed. This is a strong check of the numerics since the real part of the conductivity at all frequencies and temperatures and the amplitude of the pole all have to match up. The largest discrepancy is observed for low temperatures, this is expected since the numerical integrator there has been observed to make smaller steps indicating a numerically more difficult problem.
 
 \fig{sum_rule_a20}{The two contributions to the integral in the modified Ferrell-Glover-Tinkham sum rule for different temperatures. The red line is expected to be precisely at 0 for perfect numerics\label{f:sum}}
 
@@ -706,7 +706,7 @@ The Drude model is obtained by treating the charge carriers classically. They ar
 \begin{equation}
  \frac{\d v}{\d t}=\frac{q}{m}E-\frac{1}{\tau}v
 \end{equation}
-Solving this for harmonic $E=E_0\exp(-\i\omega t)$ gives 
+Here $qE$ is the electric force, $m$ the charge carrier mass, $q$ the charge and $\tau$ is the average time between collisions. The last term is a drag force supposed to model the collisions slowing the charge carriers down. Solving this for harmonic $E=E_0\exp(-\i\omega t)$ gives 
 \begin{equation}
  v=\frac{\tau qE_0}{m(1-\i\omega\tau)}\exp(-\i\omega t).
 \end{equation}
@@ -720,21 +720,21 @@ where $\rho$ is the density of charge carriers of charge $q$. From this definiti
 \end{equation}
 
 \section{Higher Order Maxwell Term}
-Different generalizations of the standard Lagrangian \eqref{L} have been studied, TODO cite. Tobias Wenger studied three different extensions proposed by Sachdev, TODO cite. An increase in conductivity for low frequencies similar to a Drude peak, courtesy of Hugo Strand\footnote{Chalmers University of Technology}, was observed for one of the extensions. This will here be studied in more detail.\\
-The extended Lagrangian has a higher order Maxwell term and another parameter $\alpha_2$ introducing a new scale.
+Different generalizations of the standard Lagrangian \eqref{L} have been studied. Higher order corrections using $\psi$ will not make a difference above $T_c$ so a Drude peak cannot be obtained using them. Three higher order corrections using $F_{ab}$ are described in \cite{Myers:2010pk}. Wenger studied these extensions \cite{Wenger2012}. An increase in conductivity for low frequencies similar to a Drude peak\footnote{courtesy of Hugo Strand, Chalmers University of Technology}, was observed for one of the extensions. This will here be studied in more detail.\\
+The extended Lagrangian has a higher order Maxwell term and a parameter $\alpha_2$ introducing a new scale.
 \begin{eqnarray}
  \mathcal{L}=&\frac{1}{2\kappa}\left(R-2\Lambda\right)-\frac{1}{4}F_{ab}F^{ab}-m^2\psi\overline{\psi}-D_a\psi\overline{D^a\psi}
 +\alpha_2F^a_{\ b}F^b_{\ c}F^c_{\ d}F^d_{\ a}\label{L2}
 \end{eqnarray}
-This gives equations of motion different from the earlier ones. They been calculated using a computer program, see Appendix \ref{a:eqm}. The exponents at the horizon and boundary are the same since the higher order term vanishes faster both at the horizon and boundary. The analytical solution found above $T_c$ for the original Lagrangian is not valid anymore and a numerical solution must now be used above $T_c$ as well. The result of the conductivity calculated using this extended model can be seen in Figure \ref{f:cond_a2_1} where  small $\alpha_2$ has been used.
+This gives equations of motion different from the earlier ones. They been calculated using a computer program, see Appendix \ref{a:eqm}. The exponents at the horizon and boundary are the same since the higher order term vanishes faster both at the horizon and boundary. The analytical solution of the equations of motion found above $T_c$ for the original Lagrangian is not valid anymore and a numerical solution must now be used above $T_c$ as well. The result of the conductivity calculated using this extended model can be seen in Figure \ref{f:cond_a2_1} where  small $\alpha_2$ has been used.
 
 \fig{cond_Ts_a2_0.01_v2.pdf}{Real part of the conductivity for different temperatures using the extended Lagrangian with $\alpha_2=0.01L^4$. $\rho$ is here constant.\label{f:cond_a2_1}}
 
 \fig{cond_Ts_a2_0.1_v2.pdf}{Real part of the conductivity for different temperatures using the extended Lagrangian with $\alpha_2=0.1L^4$. $\rho$ is here constant.\label{f:cond_a2_2}}
 
-This higher order term introduces a perturbation in the low frequency conductivity. The gap still appears at the same position, $\omega_\mathrm{gap}\approx\mu/2$. The behaviour around the transition from $\sigma=0$ to $\sigma=1$ is changed. The earlier increase in conductivity for $\omega$ slightly larger than $\omega_\mathrm{gap}$ has been changed. The increase is lower but at higher $\omega$. The conductivity for a slightly larger $\alpha_2$ is seen in Figure \ref{f:cond_a2_2}. Here the change around the transition is more pronounced. A peak developes for low temperatures and a second peak is also seen to develop. More peaks develop for higher $\alpha_2$ and lower $T$. These peaks seem to approach $\delta$-functions when the temperature is lowered further.\\
+This higher order term introduces a perturbation in the low frequency conductivity. The gap still appears at the same position, $\omega_\mathrm{gap}\approx\mu/2$. The behaviour around the transition from $\sigma=0$ to $\sigma=1$ is changed. The earlier increase in conductivity for $\omega$ slightly larger than $\omega_\mathrm{gap}$ has been changed. The increase is lower and at higher $\omega$. The conductivity for a slightly larger $\alpha_2$ is seen in Figure \ref{f:cond_a2_2}. Here the change around the transition is more pronounced. A peak developes for low temperatures and a second peak is also seen to develop. More peaks develop for higher $\alpha_2$ and lower $T$. These peaks seem to approach $\delta$-functions when the temperature is lowered further.\\
 
-The transition to higher conductivity is now seen to happen in two steps. \emph{First}, the conductivity increases to $\sigma\approx0.7$ at $\omega$ slightly lower than $\omega_\mathrm{gap}$. Now this transition also happens for higher temperatures, the conductivity approaches $0.7$ from above. \emph{Secondly}, the conductivity increases to reach $1$ at $\omega\approx2$, this second part of the transition seems to be reather independent of temperature.\\
+The transition to higher conductivity is now seen to happen in two steps. \emph{First}, the conductivity increases to $\sigma\approx0.7$ at $\omega$ slightly lower than $\omega_\mathrm{gap}$. Now this transition also happens for higher temperatures, the conductivity approaches $0.7$ from above. \emph{Secondly}, the conductivity increases to reach $1$ at $\omega\approx2$, this second part of the transition seems to be rather independent of temperature.\\
 
 The change above the $T_c$ is similar to Drude behaviour so this will be investigated in the next section.
 \section{Drude Fit}
@@ -772,7 +772,7 @@ A test of the numerics was again performed by verifying the sum rule. The result
 
 \section{Disussion}
 The drag force in the Drude model is due to electron collisions, the electrons have a mean time $\tau$ between collisions. These collisions are mainly with imperfections in the lattice which is something our translationally invariant theory cannot model. A similar effect could though be observed for interactions between other charge-carrying excitations of different charge.\\
-The the temperature dependence of the DC-conductivity $\sigma_0$ gives the temperature dependence of the scattering rate $1/\tau$
+The temperature dependence of the DC-conductivity $\sigma_0$ gives the temperature dependence of the scattering rate $1/\tau$
 \begin{equation}
   \frac{1}{\tau}=\frac{\rho q^2}{\sigma_0m}.
 \end{equation}
@@ -780,16 +780,16 @@ Since $\rho$, $q^2$ and $m$ are temperature independent we have
 \begin{equation}
   \frac{1}{\tau}=\frac{L^4\rho q^2}{C\alpha_2m}\left(\frac{T}{T_c}\right)^{4/3}.
 \end{equation}
-This disagrees with the linear temperature dependence of the scattering rate experimentally observed in the cuprates above $T_c$ \cite{drudeFit}. This suggests that our Drude peak originates from different processes and that our higher order term might not be a useful addition to the Lagrangian. The linear dependence found in \cite{drudeFit} is attibuted to electron-phonon interactions. Electrons might not be a suitably type of excitation for these possibly strongly coupled systems and our model might capture interactions between some other type of excitations.
+This disagrees with the linear temperature dependence of the scattering rate experimentally observed in the cuprates above $T_c$ \cite{drudeFit}. This suggests that our Drude peak originates from different processes. The linear dependence found in \cite{drudeFit} is attibuted to electron-phonon interactions. Electrons might not be a suitably type of excitation for these possibly strongly coupled systems and our model might capture interactions between some other type of excitations.
 \chapter{Summary}
 We have shown how the AdS/CFT correspondence can be used to model a high-$T_c$ superconductor, both below and above $T_c$.
 \section{Outlook}
-A much more thorough comparison with experimental results could be made. Formula \eqref{muTdep} could for example be investigated. The conductivity can also be investigate much more thoroughly. This has however already been done, e.g.~\cite{hartnoll8}, but it would be interesting to repeat their calculations. A thorough treatment of the differential equations would also be interesting. All curves in Figure \ref{f:O} approach the same value, this is because .. . The differential equation has been numerically investigated and it seems to have the same boundary behaviour regardless of initial conditions so it seems possible to find a mathematical explanation for the behaviour. It might be possible to see the $delta$-function in the conductivity as a spontanous symmetry breaking just like for the operator $\mathcal{O}$, an expectation value appearing without a source. The infinite conductivity should appear when $\omega=0$ and $\psi>0$. This is precisely when the terms without derivatives in the differential equation \eqref{eqm3} becomes negative near the boundary.
+A much more thorough comparison with experimental results could be made. Formula \eqref{muTdep} could for example be investigated. The conductivity can also be investigated much more thoroughly. This has however already been done, e.g.~\cite{hartnoll8}, but it would be interesting to repeat their calculations. A thorough treatment of the differential equations would also be interesting. All curves in Figure \ref{f:O} approach the same value, this is because .. . The differential equation has been numerically investigated and it seems to have the same boundary behaviour regardless of initial conditions so it seems possible to find a mathematical explanation for the behaviour. It might be possible to see the $\delta$-function in the conductivity as a spontanous symmetry breaking just like for the operator $\mathcal{O}$, an expectation value appearing without a source. The infinite conductivity should appear when $\omega=0$ and $\psi>0$. This is precisely when the terms without derivatives in the differential equation \eqref{eqm3} becomes negative near the boundary.
 \begin{appendices}
 \chapter{Conventions in this Report\label{conventions}}
 The AdS space will be refered to as the bulk and the boundary conformal field theory will be referred to as the boundary theory or the superconductor or just CFT. We use $z$ for the ``radial'' coordinate in AdS space, it is 0 at the conformal boundary and $z_h$ at the horizon. This is the same coordinate as the one called $r$ in \cite{hartnoll8}, there with horizon at $r=r_+$.\\
 Vector quantities not involving time components will in the boundary theory be written with boldface, $\mathbf{E}, \mathbf{J}$.\\
-Tensor indices in the $d+1$-dimensional bulk theory will be TODO latin letters, $a,b,c,...8$. Tensor indices in the $d$-dimensional boundary theory will be TODO greek letters, $\mu,\nu,...$. Tensors written in component form will have it's components ordered as $\mu=t,x,y$ on the boundary and $a=z,t,x,y$ in the bulk.
+Tensor indices will be latin letters, $a,b,c,...$. Tensors written in component form will have its components ordered as $a=t,x,y$ on the boundary and $a=t,x,y,z$ in the bulk.
 The metric sign convention for positive space-like distances will be chosen.\\
 The action is calculated from the Lagrangian as
 \begin{equation}
@@ -969,7 +969,7 @@ $\nabla_aF^{ab}$
 The numerical integration of the equations of motion becomes hard close to the horizon and the boundary due to the singular behaviour of the differential equations. The boundary and horizon behaviours calculated in Subsection \ref{s:bb} and \ref{s:hb} have here been used instead to start and stop the integration right next to the singular points. The distance to the singular points have afterwards been changed some orders of magnitude to make sure this approach does not introduce any noticable errors. The behaviour of $A_x$ is highly oscillatory close to the horizon so this oscillatory behaviour has additionally been subtracted from the equation giving a non-homogenous equation with a solution approaching 0 at the horizon. The oscillatory behaviour could as well have benn divided out to get a homogeneous equation approaching 1 at the horizon.\\
 
 The explicit embedded Runge-Kutta Prince-Dormand (8, 9) method implemented in ``The GNU Scientific Library'' \cite{gsl} has been used and the relative error per step for all functions has been required to be smaller than at most $10^{-7}$ for all results in this report.
-\chapter{Equations of Motion for Extended Lagrangian}
+\chapter{Equations of Motion for Extended Lagrangian\label{a:eqm}}
 The equations of motion have been calculated using the computer algebra system \sympy, \cite{sympy}. Here $z_h=1$ and $q=1$ has been used.
 \begin{equation}
  \begin{split}
